<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/wall"
    tools:context=".MyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerek"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/backward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="55dp"
        android:minWidth="55dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/pause"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toLeftOf="@+id/imageButton3"
        android:minHeight="55dp"
        android:minWidth="55dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:src="@drawable/start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minWidth="75dp"
        android:minHeight="75dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:src="@drawable/stop"
        android:minHeight="55dp"
        android:minWidth="55dp"
        android:layout_alignBottom="@+id/imageButton3"
        android:layout_toRightOf="@+id/imageButton3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton5"
        android:src="@drawable/forward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="55dp"
        android:minHeight="55dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_above="@+id/imageButton3"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:minWidth="350dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlista"
        android:id="@+id/button"
        android:textColor="#ffffff"
        android:onClick="playlist"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/progressBar"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:minLines="3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="38dp"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/now_playing"
        android:id="@+id/textView3"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/imageButton3"
        android:layout_alignEnd="@+id/imageButton3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losowo"
        android:id="@+id/button2"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/button"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:minHeight="55dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:id="@+id/button3"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/button2"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_toRightOf="@+id/textView"
        android:minHeight="55dp" />

</RelativeLayout>
